Added documentation pdfs

--- a/doc/Task 1 - Design Document/Task 1 - Design Document.tex
+++ b/doc/Task 1 - Design Document/Task 1 - Design Document.tex
@@ -41,14 +41,14 @@
     \section*{Group}
         \question{Fill in the names and email addresses of your group members.}
         \begin{center}
-            \begin{tabular}{r l}
-                \textbf{Name} & \textbf{Email} \\
-                Bartłomiej Cieślar & bc1520@ic.ac.uk \\
-                Jordan Hall & jh4020@ic.ac.uk \\
-                Oliver Killane & ok220@ic.ac.uk \\
-                Robert Buxton & rb419@ic.ac.uk \\
-            \end{tabular}
-        \end{center}
+			\begin{tabular}{c }
+				\textbf{Name} \\
+				Bartłomiej Cieślar \\
+				Jordan Hall \\
+				Oliver Killane \\
+				Robert Buxton \\
+			\end{tabular}
+		\end{center}
 
     \section*{Preliminaries}
         \subsection*{Sources}
