--- a/doc/Task 3 - Design Document/Task 3 - Design Document.tex
+++ b/doc/Task 3 - Design Document/Task 3 - Design Document.tex
@@ -61,12 +61,12 @@
 	\section*{Group}
 		\question{Fill in the names and email addresses of your group members.}
 		\begin{center}
-			\begin{tabular}{r l}
-				\textbf{Name} & \textbf{Email} \\
-				Bartłomiej Cieślar & bc1520@ic.ac.uk \\
-				Jordan Hall & jh4020@ic.ac.uk \\
-				Oliver Killane & ok220@ic.ac.uk \\
-				Robert Buxton & rb419@ic.ac.uk \\
+			\begin{tabular}{c }
+				\textbf{Name} \\
+				Bartłomiej Cieślar \\
+				Jordan Hall \\
+				Oliver Killane \\
+				Robert Buxton \\
 			\end{tabular}
 		\end{center}
 	
